# simplecpu

./: .clang-format  CMakeLists.txt  readme.md
cpu4bit/: CMakeLists.txt  main.cpp  readme.md
cpu4bit/src/: ALU.cpp  ALU.h  CPU.cpp  CPU.h  CPUDefs.h  Memory.cpp  Memory.h
cpu4bit/test/: CPUTest.cpp  MemTest.cpp  Test.cpp  Test.h
src/: ALU.cpp  ALU.h  CPU.cpp  CPU.h  CPUDefs.h  Memory.cpp  Memory.h  Nibble.h
test/: ALUTest.cpp  CPUTest.cpp  MemTest.cpp  Test.h
